Add genre_prediction code

--- a/Gaurav/Emotion_Detection_Models/LiveFeed.ipynb
+++ b/Gaurav/Emotion_Detection_Models/LiveFeed.ipynb
@@ -71,7 +71,7 @@
     "    '1' : 'Angry',\n",
     "    '2' : 'Disgust',\n",
     "    '3' : 'Happy',\n",
-    "    '4' : 'Nervous',\n",
+    "    '4' : 'Neutral',\n",
     "    '5' : 'Sad',\n",
     "    '6' : 'Surprise'\n",
     "}"
