Update views and Add Templates

--- a/Deepanshu/Integrate/finalVideoTest.ipynb
+++ b/Deepanshu/Integrate/finalVideoTest.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "subtle-gregory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "announced-bankruptcy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "average-citizen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "heavy-quality",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "facial-profit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "special-fossil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +69,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "behavioral-beauty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "circular-agriculture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +95,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "micro-avenue",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -111,7 +102,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handy-deficit",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -119,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "therapeutic-final",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -127,7 +116,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cardiac-louisville",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +162,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "banner-orbit",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -182,7 +169,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "horizontal-violin",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -190,7 +176,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "joint-differential",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +185,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thermal-continent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +202,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intelligent-damage",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -226,7 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mathematical-russell",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -234,7 +216,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sixth-rolling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +255,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "embedded-provision",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -282,14 +262,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "relative-prison",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "juvenile-mobility",
    "metadata": {},
    "source": [
     "### Afraid: Hip Hop\n",
@@ -304,7 +282,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "laughing-aspect",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -312,7 +289,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quantitative-arrangement",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -320,7 +296,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "willing-phoenix",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +334,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "monetary-fitness",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -367,7 +341,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "numeric-dutch",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -375,7 +348,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "sustained-level",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +368,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "disciplinary-cowboy",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -404,7 +375,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "necessary-columbia",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -412,7 +382,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bronze-eclipse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +393,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blocked-advocate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +402,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "whole-recognition",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -442,7 +409,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exact-marina",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -450,7 +416,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "empty-oasis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +430,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recent-harvard",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -473,7 +437,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "timely-terrace",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -481,7 +444,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beginning-credits",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -489,7 +451,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "careful-raise",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -497,7 +458,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "electric-moral",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -505,7 +465,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "behind-elizabeth",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -513,7 +472,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spoken-personal",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -521,7 +479,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occupied-venue",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -529,7 +486,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ignored-depression",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -537,7 +493,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stupid-payroll",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -545,7 +500,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "distributed-replication",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -553,14 +507,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "downtown-reverse",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "functional-python",
    "metadata": {},
    "source": [
     "# TUNEX\n",
@@ -572,7 +524,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "apart-milan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +533,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adjusted-concern",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -590,7 +540,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "elect-vocabulary",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -598,7 +547,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "square-talent",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -606,7 +554,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "optical-nutrition",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -614,7 +561,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "victorian-irrigation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -622,7 +568,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "broadband-basketball",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -630,7 +575,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "negative-location",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -638,7 +582,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inappropriate-mediterranean",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -646,7 +589,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adopted-compatibility",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -654,7 +596,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rental-cancellation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -662,7 +603,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coastal-amsterdam",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -670,7 +610,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amazing-cradle",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -678,7 +617,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intended-puppy",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -686,7 +624,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "touched-estonia",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -694,9 +631,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlkernel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mlkernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -708,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
